[package]
name = "proxy_counter"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
hyper-tls = "0.6"
tokio = { version = "1.40.0", features = ["full"] }
http-body-util = "0.1.2"
bytes = "1.7.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
url = "2.5.2"
http = "1.1.0"
pin-project-lite = "0.2.14"
